--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "@mosqueradvd, <David Mosquera>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.5.1"
   },
